feat: monochrome tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,12 +3,17 @@ set -g history-limit 10000
 
 set -g base-index 1
 setw -g pane-base-index 1
+set -g default-terminal "tmux-256color"
+set -a terminal-features 'xterm-256color:RGB'
+set-option -g focus-events on
 
+# BINDS
 unbind C-b
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
-bind r source-file ~/.tmux.conf; display 'reloaded.'
+# bind r source-file ~/.tmux.conf; display reloaded.
+bind r source-file ~/.tmux.conf
 
 bind | split-window -h
 bind - split-window -v
@@ -25,24 +30,22 @@ bind-key -n M-Right resize-pane -R 5
 
 set-option -g allow-rename off
 
-# Pane format
-set -g pane-active-border-style "fg=blue"
-set -g pane-border-style "fg=color8"
+# PANE FORMAT
+set -g pane-active-border-style "fg=white"
+set -g pane-border-style "fg=#818596"
 
-set -g pane-border-status top
+# set -g pane-border-status top
 set -g pane-border-format '#[bold]#{pane_title}#[default]'
 
-# bg="#161821"
-# bg="#0f1117"
-# Statusbar format
+# STATUSBAR FORMAT
 set-option -g status-justify centre
 
 # set -g status-style 'bg=#0f1117'
 set -g status-style 'bg=black'
 set -g status-right '%H:%M'
 set -g window-status-current-style 'none'
-set -g window-status-current-format '#[fg=#84a0c6]#[bg=#84a0c6,fg=black,bold] #{window_index} #[fg=#84a0c6,bg=#161821] #[fg=#818596]#{window_name} #[fg=#161821,bg=black]'
-set -g window-status-format '#[fg=#161821]#[bg=#161821,fg=#818596,bold] #{window_index}  #[fg=#818596]#{window_name} #[fg=#161821,bg=black]'
+set -g window-status-current-format '#[fg=black]#[bg=#ffffff,bold] #{window_index} #[fg=black,bg=#161821] #[fg=#818596]#{window_name} '
+set -g window-status-format '#[bg=#161821,fg=#818596,bold] #{window_index}  #[fg=#818596]#{window_name} #[fg=#161821]'
 # set -g window-status-style 'fg=white'
 
 # set pane-active-border-bg "#ff0000"
